Ajout de la documentation swagger
